Add v2.0.0 of the server from https://github.com/evolvable-by-design/api-days-demo-server
